add_executable(motor_control_spec motor_control_spec.cpp)
target_link_libraries(motor_control_spec motor_control gtest_main gmock pthread)
target_include_directories(motor_control_spec PUBLIC ${TEST_SUPPORT_DIR})
add_test(NAME motor_control_spec COMMAND motor_control_spec)

add_executable(servo_control_spec servo_control_spec.cpp)
target_link_libraries(servo_control_spec motor_control gtest_main gmock pthread)
target_include_directories(servo_control_spec PUBLIC ${TEST_SUPPORT_DIR})
add_test(NAME servo_control_spec COMMAND servo_control_spec)
